--- a/javascript/effect/parallaxEffect01.html
+++ b/javascript/effect/parallaxEffect01.html
@@ -188,7 +188,7 @@
 </head>
 <body>
     <header id="header">
-        <h1>Javascript Mouse Effect01</h1>
+        <h1><a href="parallaxEffect.html">Javascript Mouse Effect 01</a></h1>
         <p>패럴렉스 이펙트 - 메뉴 이동</p>
         <ul>
             <li class="active"><a href="parallaxEffect01.html">1</a></li>
