--- a/javascript/effect/parallaxEffect02.html
+++ b/javascript/effect/parallaxEffect02.html
@@ -226,7 +226,7 @@
 </head>
 <body>
     <header id="header">
-        <h1>Javascript Mouse Effect02</h1>
+        <h1><a href="parallaxEffect.html">Javascript Mouse Effect 02</a></h1>
         <p>패럴렉스 이펙트 - 사이드 메뉴</p>
         <ul>
             <li><a href="parallaxEffect01.html">1</a></li>
