--- a/javascript/effect/parallaxEffect04.html
+++ b/javascript/effect/parallaxEffect04.html
@@ -236,7 +236,7 @@
 </head>
 <body>
     <header id="header">
-        <h1>Javascript Mouse Effect04</h1>
+        <h1><a href="parallaxEffect.html">Javascript Mouse Effect 04</a></h1>
         <p>패럴렉스 이펙트 - 나타나기</p>
         <ul>
             <li><a href="parallaxEffect01.html">1</a></li>
