--- a/javascript/effect/parallaxEffect05.html
+++ b/javascript/effect/parallaxEffect05.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>패럴랙스 이펙트 03</title>
+    <title>패럴랙스 이펙트 05</title>
     <link rel="stylesheet" href="../assets/css/parallax.css">
     <link rel="stylesheet" href="../assets/css/dracula.css">
 
@@ -17,15 +17,12 @@
         #parallax__nav {
             position: fixed;
             right: 20px;
-            top: -200px;
+            top: 20px;
             z-index: 2000;
             background-color: rgba(0, 0, 0, 0.4);
             padding: 20px 30px;
             border-radius: 50px;
             transition: top, .4s ease;
-        }
-        #parallax__nav.show {
-            top: 20px;
         }
         #parallax__nav li {
             display: inline;
@@ -96,8 +93,8 @@
             background-repeat: no-repeat;
             background-position: center center;
             background-size: cover;
-            width: 110%;
-            height: 110%;
+            width: 115%;
+            height: 115%;
             left: -5%;
             top: -5%;
             filter: saturate(0%);
@@ -141,7 +138,6 @@
             margin-left: auto;
             margin-right: -4vw;
         }
-
         #parallax__info {
             position: fixed;
             left: 20px;
@@ -188,66 +184,23 @@
                 bottom: 10px;
             }
         }
-        #parallax__top {
-            position: fixed;
-            left: 50%;
-            bottom: -220px;
-            z-index: 10000;
-            transform: translateY(-50%);
-            width: 40px;
-            height: 40px;
-            background: rgba(0,0,0,0.4);
-            text-align: center;
-            line-height: 40px;
-            color: #fff;
-            border-radius: 50%;
-            padding: 0px;
-            cursor: pointer;
-            transition: all 0.3s;
-        }
-        #parallax__top.show {
-            bottom: 5px;
-        }
-        #parallax__top:hover {
-            background: #fff;
-            color: #000;
-        }
     </style>
 </head>
 <body>
     <header id="header">
-        <h1><a href="parallaxEffect.html">Javascript Mouse Effect 03</a></h1>
-        <p>패럴렉스 이펙트 - 숨김 메뉴</p>
+        <h1><a href="parallaxEffect.html">Javascript Mouse Effect 05</a></h1>
+        <p>패럴렉스 이펙트 - 이질감 효과</p>
         <ul>
             <li><a href="parallaxEffect01.html">1</a></li>
             <li><a href="parallaxEffect02.html">2</a></li>
-            <li class="active"><a href="parallaxEffect03.html">3</a></li>
+            <li><a href="parallaxEffect03.html">3</a></li>
             <li><a href="parallaxEffect04.html">4</a></li>
-            <li><a href="parallaxEffect05.html">5</a></li>
+            <li class="active"><a href="parallaxEffect05.html">5</a></li>
             <li><a href="parallaxEffect06.html">6</a></li>
             <li><a href="parallaxEffect07.html">7</a></li>
         </ul>
     </header>
     <!-- //header -->
-
-    <nav id="parallax__nav" class="show">
-        <ul>
-            <li class="active"><a href="#section1">메뉴1</a></li>
-            <li><a href="#section2">메뉴2</a></li>
-            <li><a href="#section3">메뉴3</a></li>
-            <li><a href="#section4">메뉴4</a></li>
-            <li><a href="#section5">메뉴5</a></li>
-            <li><a href="#section6">메뉴6</a></li>
-            <li><a href="#section7">메뉴7</a></li>
-            <li><a href="#section8">메뉴8</a></li>
-            <li><a href="#section9">메뉴9</a></li>
-        </ul>
-    </nav>
-    <!-- //nav -->
-
-    <div id="parallax__top">
-        Top
-    </div>
 
     <main id="parallax__cont">
         <div id="contents">
@@ -442,67 +395,38 @@
     <!-- //footer -->
 
     <script src="../assets/css/js/highlight.min.js"></script>
+    <script src="../assets/css/js/gsap.min.js"></script>
     <script src="../assets/css/js/common.js"></script>
     <script>
         hljs.highlightAll();
     </script>
 
     <script>
-        window.addEventListener("scroll", () => {
-            let scrollTop = window.pageYOffset || window.scrollY || document.documentElement.scrollTop;
-
-            if(scrollTop > 0) {
-                document.querySelector("#parallax__nav").classList.add("show");
-            } else {
-                document.querySelector("#parallax__nav").classList.remove("show");
-            }
-
-            if(scrollTop + window.innerHeight >= document.body.scrollHeight) {     // 문서 전체 높이 - 브라우저 높이
-                document.querySelector("#parallax__top").classList.add("show");
-            } else {
-                document.querySelector("#parallax__top").classList.remove("show");
-            }
+        function scroll() {
+            let scrollTop = window.pageYoffset || document.documentElement.scrollTop;
 
             document.querySelector("#parallax__info span").innerText = Math.ceil(scrollTop);
-        });
 
-        document.querySelector("#parallax__top").addEventListener("click", () => {
-            window.scrollTo({left: 0, top: 0, behavior: "smooth"})
-        });
+            document.querySelectorAll(".content__item").forEach(item => {
+                const target1 = item.querySelector(".content__item__img");
+                const target2 = item.querySelector(".content__item__desc");
+                const target3 = item.querySelector(".content__item__num");
 
-        // let nowScroll = true;
-        // let lastScroll = 0;
+                let offset1 = (scrollTop - item.offsetTop) * 0.1;
+                let offset2 = (scrollTop - item.offsetTop) * 0.15;
+                let offset3 = (scrollTop - item.offsetTop) * 0.2;
 
-        // function scrollProgress() {
-        //     nowScroll = true;
+                // target1.style.transform = `translateY(${offset1}px)`;
+                // target2.style.transform = `translateX(${offset2}px)`;
 
-        //     setInterval(() => {
-        //         if(nowScroll) {
-        //             nowScroll = false;
-        //             hasScroll();
-        //         }
-        //     }, 300)
-        // }
+                gsap.to(target1, {duration: .3, y: offset1, ease: "power4.out"})
+                gsap.to(target2, {duration: .3, y: offset2})
+                gsap.to(target3, {duration: .3, y: offset3, ease: "expo.out"})
+            })
 
-        // function hasScroll() {
-        //     let scrollTop = window.pageYOffset || window.scrollY || document.documentElement.scrollTop;
-
-        //     if(scrollTop < lastScroll) {
-        //         document.querySelector("#parallax__nav").classList.add("show")
-        //     } else {
-        //         document.querySelector("#parallax__nav").classList.remove("show")
-        //     }
-
-        //     if(scrollTop < lastScroll) {
-        //         document.querySelector("#parallax__top").classList.add("show")
-        //     } else {
-        //         document.querySelector("#parallax__top").classList.remove("show")
-        //     }
-
-        //     lastScroll = scrollTop;
-        // }
-
-        // window.addEventListener("scroll", scrollProgress);
+            requestAnimationFrame(scroll);
+        }
+        scroll();
     </script>
 </body>
 </html>
