--- a/javascript/javascript02.html
+++ b/javascript/javascript02.html
@@ -88,7 +88,6 @@
     document.write(z);
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -115,7 +114,6 @@
     document.write(z);
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -140,7 +138,6 @@
     document.write(arr[2]);
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -166,7 +163,6 @@
     document.write(arr[2][1]);
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -190,7 +186,6 @@
     document.write(arr.length);      //배열의 갯수를 뽑아줌
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -219,7 +214,6 @@
     };
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -251,7 +245,6 @@
     });
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -278,7 +271,6 @@
     };
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -306,7 +298,6 @@
     };
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -347,7 +338,6 @@
     });
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -374,7 +364,6 @@
     document.write(...num);     //오퍼레이터 사용
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -400,7 +389,6 @@
     document.write(c);
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -429,7 +417,6 @@
     document.write[obj.c];
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -458,7 +445,6 @@
     document.write(Object.entries(obj));
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -491,7 +477,6 @@
     document.write(name3);
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -520,7 +505,6 @@
     }
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -549,7 +533,6 @@
     });
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -582,7 +565,6 @@
     document.write("d" in obj);
 </code></pre>
                 </div>
-
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
@@ -595,6 +577,160 @@
                             true<br>
                             true<br>
                             false
+                        </div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 19 -->
+            <div id="sample19" class="sample">
+                <h3>19. 객체 : 데이터 불러오기 : 펼침연산자 - 복사</h3>
+                <p></p>
+                <div class="script">
+<pre><code class="language-js">    const obj = {
+        a: 100,
+        b: 200,
+        c: "javascript"
+    }
+
+    const spread = {...obj}
+
+    document.write(spread.a);
+    document.write(spread.b);
+    document.write(spread.c);
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample19_result">
+                            100<br>
+                            200<br>
+                            javascript
+                        </div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 20 -->
+            <div id="sample20" class="sample">
+                <h3>20. 객체 : 데이터 불러오기 : 펼침연산자 - 추가</h3>
+                <p></p>
+                <div class="script">
+<pre><code class="language-js">    const obj = {
+        a: 100,
+        b: 200,
+        c: "javascript"
+    }
+
+    const spread = {...obj, d:"jquery"}
+
+    document.write(spread.a);
+    document.write(spread.b);
+    document.write(spread.c);
+    document.write(spread.d);
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample20_result">
+                            100<br>
+                            200<br>
+                            javascript<br>
+                            jquery
+                        </div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 21 -->
+            <div id="sample21" class="sample">
+                <h3>21. 객체 : 데이터 불러오기 : 펼침연산자 - 결합</h3>
+                <p></p>
+                <div class="script">
+<pre><code class="language-js">    const objA = {
+        a: 100,
+        b: 200
+    }
+    const objB = {
+        c: "javascript",
+        d: "jquery"
+    }
+    const spread = {...objA, ...objB}
+
+    document.write(spread.a);
+    document.write(spread.b);
+    document.write(spread.c);
+    document.write(spread.d);
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample21_result">
+                            100<br>
+                            200<br>
+                            javascript<br>
+                            jquery
+                        </div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 22 -->
+            <div id="sample22" class="sample">
+                <h3>22. 객체 : 데이터 불러오기 : 비구조화 할당</h3>
+                <p></p>
+                <div class="script">
+<pre><code class="language-js">    const obj = {
+        a: 100,
+        b: 200,
+        c: "javascript"
+    }
+    const {a, b, c} = obj;
+
+    document.write(a);
+    document.write(b);
+    document.write(c);
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample22_result">
+                            100<br>
+                            200<br>
+                            javascript
+                        </div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 23 -->
+            <div id="sample19" class="sample">
+                <h3>23. 객체 : 데이터 불러오기 : 객체구조분해할당</h3>
+                <p></p>
+                <div class="script">
+<pre><code class="language-js">    const obj = {
+        a: 100,
+        b: 200,
+        c: "javascript"
+    }
+    const {a: name1, b: name2, c: name3} = obj;
+
+    document.write(name1);
+    document.write(name2);
+    document.write(name3);
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample23_result">
+                            100<br>
+                            200<br>
+                            javascript
                         </div>
                     </details>
                 </div>
@@ -894,6 +1030,74 @@
         //     document.write("c" in obj);
         //     document.write("d" in obj);
         // }
+
+        // 19
+        // 복사
+        // const obj = {
+        //     a: 100,
+        //     b: 200,
+        //     c: "javascript"
+        // }
+
+        // const spread = {...obj}
+
+        // document.write(spread.a);
+        // document.write(spread.b);
+        // document.write(spread.c);
+
+        // 20
+        // const obj = {
+        //     a: 100,
+        //     b: 200,
+        //     c: "javascript"
+        // }
+
+        // const spread = {...obj, d:"jquery"}
+
+        // document.write(spread.a);
+        // document.write(spread.b);
+        // document.write(spread.c);
+        // document.write(spread.d);
+
+        // 21
+        // const objA = {
+        //     a: 100,
+        //     b: 200
+        // }
+        // const objB = {
+        //     c: "javascript",
+        //     d: "jquery"
+        // }
+        // const spread = {...objA, ...objB}
+
+        // document.write(spread.a);
+        // document.write(spread.b);
+        // document.write(spread.c);
+        // document.write(spread.d);
+
+        // 22
+        // const obj = {
+        //     a: 100,
+        //     b: 200,
+        //     c: "javascript"
+        // }
+        // const {a, b, c} = obj;
+
+        // document.write(a);
+        // document.write(b);
+        // document.write(c);
+
+        // 24
+        // const obj = {
+        //     a: 100,
+        //     b: 200,
+        //     c: "javascript"
+        // }
+        // const {a: name1, b: name2, c: name3} = obj;
+
+        // document.write(name1);
+        // document.write(name2);
+        // document.write(name3);
     </script>
 </body>
 
