--- a/javascript/javascript03.html
+++ b/javascript/javascript03.html
@@ -60,6 +60,23 @@
                 <li><a href="#sample10">10. 화살표 함수 : 익명 함수 + 매개변수 + 리턴값 + 괄호 생략</a></li>
                 <li><a href="#sample11">11. 화살표 함수 : 익명 함수 + 매개변수 + 리턴값 + 괄호 생략 + 리턴 생략</a></li>
                 <li><a href="#sample12">12. 화살표 함수 : 선언적 함수 + 매개변수 + 리턴값 + 괄호 생략 + 리턴 생략</a></li>
+                <li><a href="#sample13">13. 함수 유형 : 함수와 매개 변수를 이용한 형태</a></li>
+                <li><a href="#sample14">14. 함수 유형 : 함수와 변수를 이용한 형태</a></li>
+                <li><a href="#sample15">15. 함수 유형 : 함수와 배열 ,객체를 이용한 형태</a></li>
+                <li><a href="#sample16">16. 함수 유형 : 객체 안에 변수와 함수를 이용한 형태</a></li>
+                <li><a href="#sample17">17. 함수 유형 : 객체 생성자 함수 ***</a></li>
+                <li><a href="#sample18">18. 함수 유형 : 프로토타입 함수</a></li>
+                <li><a href="#sample19">19. 함수 유형 : 객체 리터럴 함수</a></li>
+                <li><a href="#sample20">20. 즉시 실행 함수</a></li>
+                <li><a href="#sample21">21. 파라미터 함수</a></li>
+                <li><a href="#sample22">22. 아규먼트 함수</a></li>
+                <li><a href="#sample23">23. 재귀함수 : 자기 자신을 호출</a></li>
+                <li><a href="#sample24">24. 콜백 함수 : 다른 함수에 인수로 넘겨지는 함수</a></li>
+                <li><a href="#sample25">25. 콜백 함수 : 반복문</a></li>
+                <li><a href="#sample26">26. 콜백 함수 : 동기 / 비동기</a></li>
+                <li><a href="#sample27">27. promise 함수</a></li>
+                <li><a href="#sample28">28. 내부 함수 : 스코프, 클로져</a></li>
+                <li><a href="#sample29">29. 클래스</a></li>
             </ul>
             </div>
 
@@ -88,7 +105,7 @@
 
             <!-- 02 -->
             <div id="sample02" class="sample">
-                <h3>익명 함수</h3>
+                <h3>02. 익명 함수</h3>
                 <p>배열을 사용</p>
                 <div class="script">
 <pre><code class="language-js">    const func = function() {
@@ -326,7 +343,7 @@
             </div>
 
             <!-- 13 -->
-            <div id="sample12" class="sample">
+            <div id="sample13" class="sample">
                 <h3>13. 함수 유형 : 함수와 매개 변수를 이용한 형태</h3>
                 <p>
                 </p>
@@ -342,7 +359,7 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample12_result">
+                        <div class="sample13_result">
                             1. 함수실행<br>
                             2. 자바스크립트실행<br>
                             3. 제이쿼리실행
@@ -352,7 +369,7 @@
             </div>
 
             <!-- 14 -->
-            <div id="sample12" class="sample">
+            <div id="sample14" class="sample">
                 <h3>14. 함수 유형 : 함수와 변수를 이용한 형태</h3>
                 <p>
                 </p>
@@ -376,7 +393,7 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample12_result">
+                        <div class="sample14_result">
                             1. 함수실행<br>
                             2. 자바스크립트실행<br>
                             3. 제이쿼리실행
@@ -386,7 +403,7 @@
             </div>
 
             <!-- 15 -->
-            <div id="sample12" class="sample">
+            <div id="sample15" class="sample">
                 <h3>15. 함수 유형 : 함수와 배열 ,객체를 이용한 형태</h3>
                 <p>
                 </p>
@@ -419,7 +436,7 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample12_result">
+                        <div class="sample15_result">
                             1. 함수실행<br>
                             2. 자바스크립트실행<br>
                             3. 제이쿼리실행
@@ -429,7 +446,7 @@
             </div>
 
             <!-- 16 -->
-            <div id="sample12" class="sample">
+            <div id="sample16" class="sample">
                 <h3>16. 함수 유형 : 객체 안에 변수와 함수를 이용한 형태</h3>
                 <p>
                 </p>
@@ -463,7 +480,7 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample12_result">
+                        <div class="sample16_result">
                             1. 함수실행<br>
                             2. 자바스크립트실행<br>
                             3. 제이쿼리실행
@@ -473,7 +490,7 @@
             </div>
 
             <!-- 17 -->
-            <div id="sample12" class="sample">
+            <div id="sample17" class="sample">
                 <h3>17. 함수 유형 : 객체 생성자 함수 ***</h3>
                 <p>
                 </p>
@@ -501,7 +518,7 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample12_result">
+                        <div class="sample17_result">
                             1. 함수실행<br>
                             2. 자바스크립트실행<br>
                             3. 제이쿼리실행
@@ -511,7 +528,7 @@
             </div>
 
             <!-- 18 -->
-            <div id="sample12" class="sample">
+            <div id="sample18" class="sample">
                 <h3>18. 함수 유형 : 프로토타입 함수</h3>
                 <p>
                 </p>
@@ -539,7 +556,7 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample12_result">
+                        <div class="sample18_result">
                             1. 함수실행<br>
                             2. 자바스크립트실행<br>
                             3. 제이쿼리실행
@@ -549,7 +566,7 @@
             </div>
 
             <!-- 19 -->
-            <div id="sample12" class="sample">
+            <div id="sample19" class="sample">
                 <h3>19. 함수 유형 : 객체 리터럴 함수</h3>
                 <p>
                 </p>
@@ -586,7 +603,7 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample12_result">
+                        <div class="sample19_result">
                             1. 함수실행<br>
                             2. 자바스크립트실행<br>
                             3. 제이쿼리실행
@@ -596,7 +613,7 @@
             </div>
 
             <!-- 20 -->
-            <div id="sample12" class="sample">
+            <div id="sample20" class="sample">
                 <h3>20. 즉시 실행 함수</h3>
                 <p>
                 </p>
@@ -613,7 +630,7 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample12_result">
+                        <div class="sample20_result">
                             함수실행
                         </div>
                     </details>
@@ -621,7 +638,7 @@
             </div> 
 
             <!-- 21 -->
-            <div id="sample12" class="sample">
+            <div id="sample21" class="sample">
                 <h3>21. 파라미터 함수</h3>
                 <p>
                 </p>
@@ -640,7 +657,7 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample12_result">
+                        <div class="sample21_result">
                             함수실행
                         </div>
                     </details>
@@ -648,7 +665,7 @@
             </div>
 
             <!-- 22 -->
-            <div id="sample12" class="sample">
+            <div id="sample22" class="sample">
                 <h3>22. 아규먼트 함수</h3>
                 <p>
                 </p>
@@ -663,8 +680,214 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample12_result">
+                        <div class="sample22_result">
                             함수실행
+                        </div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 23 -->
+            <div id="sample23" class="sample">
+                <h3>23. 재귀함수 : 자기 자신을 호출</h3>
+                <p>
+                    동시에 여러개 실행
+                </p>
+                <div class="script">
+<pre><code class="language-js">    function func(num) {
+        if(num &lt;= 1) {
+            document.write("함수 실행" + num);
+        } else {
+            document.write("함수 실행" + num);
+            func(num-1)
+        }
+    }
+    func(10);
+
+    // 애니메이션 표현
+    function animation() {
+        document.write("함수 실행")
+
+        requestAnimationFrame(animation);
+    }
+    animation();
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample23_result">
+                            함수 실행10함수 실행9함수 실행8함수 실행7함수 실행6함수 실행5함수 실행4함수 실행3함수 실행2함수 실행1<br>
+                            애니메이션 표현 : 함수 실행 ....무한 반복
+                        </div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 24 -->
+            <div id="sample24" class="sample">
+                <h3>24. 콜백 함수 : 다른 함수에 인수로 넘겨지는 함수</h3>
+                <p>
+                    첫 번째 함수가 실행 -> 두 번째 함수가 실행
+                </p>
+                <div class="script">
+<pre><code class="language-js">    function func() {
+        document.write("함수 실행2");
+    }
+    function callback(str) {
+        document.write("함수 실행1");
+        str();
+    }
+    callback(func);
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample24_result">
+                            함수 실행1함수 실행2
+                        </div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 25 -->
+            <div id="sample25" class="sample">
+                <h3>25. 콜백 함수 : 반복문</h3>
+                <p>
+                </p>
+                <div class="script">
+<pre><code class="language-js">    function func(index) {
+        document.write("함수 실행" + index);
+    }
+    function callback(num) {
+        for(let i=1; i&lt;=10; i++) {
+            num(i)
+        }
+    }
+    callback(func);
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample25_result">
+                            함수 실행1함수 실행2함수 실행3함수 실행4함수 실행5함수 실행6함수 실행7함수 실행8함수 실행9함수 실행10
+                        </div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 26 -->
+            <div id="sample26" class="sample">
+                <h3>26. 콜백 함수 : 동기 / 비동기</h3>
+                <p>
+                </p>
+                <div class="script">
+<pre><code class="language-js">    
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample26_result">
+                            
+                        </div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 27 -->
+            <div id="sample27" class="sample">
+                <h3>27. promise 함수</h3>
+                <p>
+                </p>
+                <div class="script">
+<pre><code class="language-js">    
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample27_result">
+                            
+                        </div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 28 -->
+            <div id="sample28" class="sample">
+                <h3>28. 내부 함수 : 스코프, 클로져</h3>
+                <p>
+                </p>
+                <div class="script">
+<pre><code class="language-js">    function func() {
+        function funcA() {
+            document.write("함수 실행");
+        };
+        funcA();
+
+        function funcB() {
+            document.write("함수 실행");
+        };
+        funcB();
+    }
+    func();
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample28_result">
+                            함수 실행함수 실행
+                        </div>
+                    </details>
+                </div>
+            </div>
+
+            <!-- 30 -->
+            <div id="sample30" class="sample">
+                <h3>30. 클래스 상속</h3>
+                <p>
+                </p>
+                <div class="script">
+<pre><code class="language-js">    class study {
+        constructor(num, name, job) {
+            this.num = num;
+            this.name = name;
+            this.job = job;
+        }
+            result() {
+                document.write(this.num + ".내이름은" + this.name + "이며, 직업은" + this.job + "입니다.")
+            }
+        }
+
+        class study2 extends study {
+            constructor(num, name, job, age) {
+                super(num, name, job);
+                this.age = age;
+            }
+            result2() {
+                document.write(this.num + ".내이름은" + this.name + "이며, 직업은" + this.job + "이며" + this.age + "살입니다.")
+            }
+        }
+
+    const info1 = new study("1", "k", "a")
+    const info2 = new study2("2", "k", "b", 100)
+
+    info1.result();
+    info2.result();
+    info2.result2();
+</code></pre>
+                </div>
+                <div class="result">
+                    <details>
+                        <summary>결과보기</summary>
+                        <div class="sample30_result">
+                            1.내이름은k이며, 직업은a입니다.<br>
+                            2.내이름은k이며, 직업은b입니다.<br>
+                            2.내이름은k이며, 직업은b이며100살입니다.
                         </div>
                     </details>
                 </div>
@@ -683,33 +906,6 @@
     <script>hljs.highlightAll();</script>
 
     <script>
-        // 20. 즉시 실행 함수
-        (function func() {
-            document.write("함수 실행")
-        }());
-
-        (() => {
-            document.write("함수 실행")
-        }) ();
-
-        // 21. 파라미터 함수
-        function func(str) {
-            document.write(str);
-        }
-        func("함수실행");
-
-        function func (str = "함수 실행") {
-            document.write(str);
-        }
-        func();
-
-        // // 22. 아규먼트 함수
-        // function func(a,b) {
-        //     document.write(arguments[0])
-        //     document.write(arguments[1])
-        // }
-        // func("함수실행", "함수실행");
-
         // // 선언적 함수
         // function func() {
         //     document.write("함수가 실행되었습니다.1");
@@ -942,10 +1138,160 @@
         //     info3.result3();
         // }
 
-        // 20. 클래스 : 함수 집합체
-        {
+        // 20. 즉시 실행 함수
+        // (function func() {
+        //     document.write("함수 실행")
+        // }());
 
-        }
+        // (() => {
+        //     document.write("함수 실행")
+        // }) ();
+
+        // 21. 파라미터 함수
+        // function func(str) {
+        //     document.write(str);
+        // }
+        // func("함수실행");
+
+        // function func (str = "함수 실행") {
+        //     document.write(str);
+        // }
+        // func();
+
+        // // 22. 아규먼트 함수
+        // function func(a,b) {
+        //     document.write(arguments[0])
+        //     document.write(arguments[1])
+        // }
+        // func("함수실행", "함수실행");
+
+        // 23
+        // function func(num) {
+        //     if(num <= 1) {
+        //         document.write("함수 실행" + num);
+        //     } else {
+        //         document.write("함수 실행" + num);
+        //         func(num-1)
+        //     }
+        // }
+        // func(10);
+
+        // 애니메이션 표현
+        // function animation() {
+        //     document.write("함수 실행")
+
+        //     requestAnimationFrame(animation);
+        // }
+        // animation();
+
+        // 25
+        // function func(index) {
+        //     document.write("함수 실행" + index);
+        // }
+        // function callback(num) {
+        //     for(let i=1; i<=10; i++) {
+        //         num(i)
+        //     }
+        // }
+        // callback(func);
+
+        // 26
+        // function funcA() {
+        //     document.write("funcA가 실행")
+        // }
+        // function funcB() {
+        //     document.write("funcB가 실행")
+        // }
+        // funcA();
+        // funcB();
+
+        // b -> a
+        // function funcA() {
+        //     setTimeout(() => {
+        //         console.log("funcA가 실행")
+        //     },1000);
+        // }
+        // function funcB() {
+        //     console.log("funcB가 실행")
+        // }
+        // funcA();
+        // funcB();
+
+        // a -> b
+        // function funcA(callback) {
+        //     setTimeout (() => {
+        //         console.log("funcA 실행")
+        //         callback();
+        //     }, 1000);
+        // }
+        // function funcB() {
+        //     setTimeout (() => {
+        //         console.log("funcB 실행")
+        //         callback();
+        //     }, 1000);
+        // }
+        // function funcC() {
+        //     setTimeout (() => {
+        //         console.log("funcC 실행")
+        //         callback();
+        //     }, 1000);
+        // }
+        // function funcD() {
+        //     setTimeout (() => {
+        //         console.log("funcD 실행")
+        //         callback();
+        //     }, 1000);
+        // }
+        // funcA(function() {
+        //     funcB(function() {
+        //         funcC(function() {
+        //             funcD;
+        //         })
+        //     })
+        // })
+
+        // 28
+        // function func() {
+        //     function funcA() {
+        //         document.write("함수 실행");
+        //     };
+        //     funcA();
+
+        //     function funcB() {
+        //         document.write("함수 실행");
+        //     };
+        //     funcB();
+        // }
+        // func();
+
+        // 29 
+        // class study {
+        //     constructor(num, name, job) {
+        //         this.num = num;
+        //         this.name = name;
+        //         this.job = job;
+        //     }
+        //         result() {
+        //             document.write(this.num + ".내이름은" + this.name + "이며, 직업은" + this.job + "입니다.")
+        //         }
+        //     }
+
+        //     class study2 extends study {
+        //         constructor(num, name, job, age) {
+        //             super(num, name, job);
+        //             this.age = age;
+        //         }
+        //         result2() {
+        //             document.write(this.num + ".내이름은" + this.name + "이며, 직업은" + this.job + "이며" + this.age + "살입니다.")
+        //         }
+        //     }
+
+        // const info1 = new study("1", "k", "a")
+        // const info2 = new study2("2", "k", "b", 100)
+
+        // info1.result();
+        // info2.result();
+        // info2.result2();
     </script>
 </body>
 
