--- a/study/t_study/Ex/study/parallaxEffect01.html
+++ b/study/t_study/Ex/study/parallaxEffect01.html
@@ -12,7 +12,7 @@
 <body>
     <main id="main">
         <div class="document">
-            <h2 class="t_tit">페럴랙스 이펙트 01</h2>
+            <h2 class="t_tit">페럴랙스 이펙트 : 메뉴 이동</h2>
             <p class="t_desc2">
                 이번 시간에는 페럴랙스 형태를 가진 이펙트를 코딩해봤습니다.
             </p>
